# imagecpluplusdemo

./: .gitmodules  CMakeLists.txt  README.md  build.sh  cppdemo.js  cppdemo.wasm  hello.c  hello.cpp  index.html  index.js  index.wasm  miscUtils.hpp  shapeNormalise.cpp  shapeNormalise.hpp  testIntegrationValues.cpp
cppFiles/: CMakeLists.txt  Makefile.wasm  build.sh  output.json  output_zoom1.json
cppFiles/externalDependencies/hiredis/: Makefile
cppFiles/opencv_default/: CMakeCache.txt  CMakeDownloadLog.txt  CMakeVars.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  OpenCVConfig.cmake  OpenCVModules.cmake  cmake_install.cmake  cmake_uninstall.cmake  opencv_data_config.hpp  opencv_python_tests.cfg  setup_vars.sh  version_string.tmp
cppFiles/opencv_default/data/: CTestTestfile.cmake  Makefile  cmake_install.cmake
cppFiles/opencv_default/doc/: CTestTestfile.cmake  Makefile  cmake_install.cmake
cppFiles/opencv_default/include/: CTestTestfile.cmake  Makefile  cmake_install.cmake
cppFiles/opencv_default/modules/: CTestTestfile.cmake  Makefile  cmake_install.cmake
cppFiles/opencv_default/modules/.firstpass/js/: Makefile  (+2 more)
cppFiles/opencv_default/modules/calib3d/: CTestTestfile.cmake  Makefile  cmake_install.cmake  undistort.simd_declarations.hpp
cppFiles/opencv_default/modules/core/: CTestTestfile.cmake  Makefile  arithm.simd_declarations.hpp  cmake_install.cmake  convert.simd_declarations.hpp  convert_scale.simd_declarations.hpp  count_non_zero.simd_declarations.hpp  mathfuncs_core.simd_declarations.hpp  matmul.simd_declarations.hpp  mean.simd_declarations.hpp  merge.simd_declarations.hpp  split.simd_declarations.hpp  stat.simd_declarations.hpp  sum.simd_declarations.hpp
cppFiles/opencv_default/modules/dnn/: CTestTestfile.cmake  Makefile  cmake_install.cmake
cppFiles/opencv_default/modules/features2d/: CTestTestfile.cmake  Makefile  cmake_install.cmake
cppFiles/opencv_default/modules/flann/: CTestTestfile.cmake  Makefile  cmake_install.cmake
cppFiles/opencv_default/modules/imgproc/: CTestTestfile.cmake  Makefile  accum.simd_declarations.hpp  bilateral_filter.simd_declarations.hpp  box_filter.simd_declarations.hpp  cmake_install.cmake  color_hsv.simd_declarations.hpp  color_rgb.simd_declarations.hpp  color_yuv.simd_declarations.hpp  filter.simd_declarations.hpp  median_blur.simd_declarations.hpp  morph.simd_declarations.hpp  smooth.simd_declarations.hpp
cppFiles/opencv_default/modules/js/: CTestTestfile.cmake  Makefile  bindings.cpp  headers.txt
cppFiles/opencv_default/modules/objdetect/: CTestTestfile.cmake  Makefile  cmake_install.cmake
cppFiles/opencv_default/modules/photo/: CTestTestfile.cmake  Makefile  cmake_install.cmake
cppFiles/opencv_default/modules/python_tests/: CTestTestfile.cmake  Makefile
cppFiles/opencv_default/modules/video/: CTestTestfile.cmake  Makefile  cmake_install.cmake
cppFiles/opencv_default/python_loader/cv2/: config.py
cppFiles/opencv_default/unix-install/: OpenCVConfig.cmake
cppFiles/src/: ImageHash.cpp  ImageHash.hpp  PerceptualHash.hpp  ShapeAndPositionInvariantImage.hpp  annoymodule.cc  boostGeometryTypes.hpp  canny.cpp  commonTestFunctions.cpp  commonTestFunctions.h  defaultImageValues.h  main.cc  mainImageProcessingFunctions.cpp  mainImageProcessingFunctions.hpp  miscUtils.hpp  search.cpp  search.h  shapeNormalise.cpp  shapeNormalise.hpp  testIntegrationValues.cpp  utils.hpp  webasmMain.cpp
cppFiles/src/img_hash_opencv_module/: img_hash_base.hpp  phash.cpp  phash.hpp
cppFiles/tests/: accuracytest2.cpp  hashtests.cpp  paperTests.cpp  testIntegrationValues.cpp
(+107 files in other folders)
